# discordbot-for-SCUM

./: .dockerignore  .gitignore  .replit  Dockerfile  Dockerfile-Render  config.py  discloud.config  docker-compose.yml  main.py  package.json  pyproject.toml  readme.md  replit.nix  requirements.txt  template.env  tsconfig.json
.github/workflows/: main_scum-happybot.yml
asset/: embed.py
cogs/: app.py  lotto.py  register.py
job/: log_notifier.py  slot_tracking.py
locales/en_US/LC_MESSAGES/: register.po
locales/th_TH/LC_MESSAGES/: register.po
server/: route.py
src/: Logger.ts  Router.ts  config.py  config.ts  index.ts  main.py
src/asset/: embed.py
src/cogs/: app.py  lotto.py  register.py  slot_tracking.py
src/constant/: Color.ts  ErrorCode.ts
src/factory/: ApplicationFactory.ts  CommandFactory.ts  LocaleFactory.ts  index.ts
src/factory/commands/register/: Register.cmd.ts
src/factory/commands/register/message/: RegisterMsg.ts
src/factory/job/: TimedAlert.ts  timealert.ts
src/job/: log_notifier.py
src/locales/en/: error.json  register.json
src/locales/th/: error.json  register.json
src/model/: CommandError.ts  ServerInfo.ts  SteamProfile.ts  index.ts
src/repository/: ServerInfoRepository.ts  SteamProfileRepository.ts
src/repository/impl/: ServerInfoRepositoryImpl.ts  SteamProfileRepositoryImpl.ts
src/server/: route.py
src/utils/: ConfigUtils.ts  DiscordUtils.ts  EmbedBuilder.ts  StringUtils.ts  index.ts
src/utils/config/: ConfigUtils.ts
src/utils/data/: StringUtils.ts
src/utils/message/: EmbedBuilder.ts
