[tool.poetry]
name = "discordbot-for-scum"
version = "0.1.0"
description = ""
authors = ["chaiyatat.m"]
readme = "README.md"
packages = [{include = "discordbot_for_scum"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=2.0,<2.3"
python-dotenv = "^1.0.0"
pytz = "2023.3.post1"
replit = "3.3.2"
requests = "2.31.0"
lxml = "4.9.3"
babel = "2.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
