[tool.poetry]
name = "discordbot-for-scum"
version = "1.0.0"
description = ""
authors = ["chaiyatat.m"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
babel = "2.13.1"
discord-py = "^2.3.2"
flask = ">=2.0,<2.3"
python = "^3.10"
python-dotenv = "^1.0.0"
pytz = "2023.3.post1"
requests = "2.31.0"
redis = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
